# docsearch

./: .gitignore  LICENSE  Launch docsearch.command  README.md  docsearch.conf  pyproject.toml
docsearch/: __init__.py  __main__.py  cli.py  config.py  core.py  index.py  web.py
progress/: implementation_plan.md
tests/: conftest.py  test_concurrency.py  test_extractors.py  test_folder_picker.py  test_index_primitives.py  test_review.py  test_walker.py  test_web_sse.py
tests/fixtures/corpus/: art.md  cafe.txt  mixed.txt  multipage.txt  philosophy.txt
